src/main/java/com/example/skill/error/EntityNotFoundException.java
package com.example.skill.error;

public class EntityNotFound {
}
